Improved Videos page #728 - some improvements to README - introduced concept of (internal) state to a video component - create VideoHeader component - handleToggle of Video - VideoWrapper and VideoMain to deal with different scenarios we render a Video - fixing gap in curly braces - added Moment and fixed timestamps - randomized the interval slightly, 10-20s - introduced forceOpen for Video - show a “slide” if Processing - hide Toggle button if Processing - comment out InfoBox - styling - different dummy videos Using Created Date if no publishDate - re-enabled Neonscore - No link in title if forceOpen - v1 -> v2

--- a/src/css/components/_thumbnail.scss
+++ b/src/css/components/_thumbnail.scss
@@ -21,7 +21,6 @@
     position: absolute;
     bottom: 4%;
     right: 3%;
-    display: none;
 }
 
 .wonderland-thumbnail__enabled {
